# ThesisCheck

./: .gitignore  LICENSE  README.md  本科毕业论文（设计）文本规范 (1).docx  论文审查参考提示词.md  论文评分提示词.md
.agent/rules/: myrules.md
backend/: main.py  pyproject.toml
backend/models/: schemas.py
backend/prompts/: thesis_review.py
backend/routers/: export.py  review.py  rewrite.py
backend/services/: export_service.py  llm_service.py
frontend/: manifest.xml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/src/commands/: commands.html  commands.ts
frontend/src/taskpane/: App.tsx  index.tsx  taskpane.html
frontend/src/taskpane/components/: Header.tsx  LoadingState.tsx  StreamingTextPanel.tsx  StreamingView.tsx
frontend/src/taskpane/hooks/: useSettings.ts  useStreaming.ts
frontend/src/taskpane/pages/: ReviewPage.tsx  RewritePage.tsx  SettingsPage.tsx
frontend/src/taskpane/services/: api.ts  exportService.ts  storage.ts  wordApi.ts
frontend/src/taskpane/styles/: global.css
