[project]
name = "backend"
version = "0.1.0"
description = "ThesisCheck backend - LLM-powered thesis review API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "openai>=1.60.0",
    "pydantic>=2.10.0",
    "sse-starlette>=2.2.0",
    "python-docx>=1.1.0",
]
